<resources>
    <string name="app_name">JustWeather</string>

    <string name="change_city">Сменить город</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="humidity">Влажность</string>
    <string name="pressure">Давление</string>
    <string name="percent">%</string>
    <string name="pressure_hpa">КПа</string>
    <string name="last_update">Последнее обновление</string>
    <string name="celsius">"℃"</string>

    <string name="place_not_found">Данные не найдены.</string>
    <string name="Monday">Пн.</string>
    <string name="Tuesday">Вт.</string>
    <string name="Wednesday">Ср.</string>
    <string name="Thursday">Чт.</string>
    <string name="Friday">Пт.</string>
    <string name="Saturday">Сб.</string>
    <string name="Sunday">Вс.</string>

</resources>
